# TFG_MS_ROS

./: .gitignore  README.md  battery_subscriber.py  docker-compose.yml
Docker/: Dockerfile
Docker/src/install/: ros2.sh  ros2_files_extras.sh  ros2_rover.sh  ros2_utils.sh
MS_ROS_V0.1/: Dockerfile  dockerfile  go.mod  go.sum  main.go  ms_Battery.py
MS_ROS_V0.1/api/: api.go  api_docker.txt  routes.go
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/my_battery_package/lib/my_battery_package/: battery_publisher
install/my_battery_package/share/my_battery_package/: package.ps1  package.sh  package.xml  package.zsh
install/pkg_interfaces/include/pkg_interfaces/msg/: batterylvl.h  batterylvl.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/pkg_interfaces/share/pkg_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_ws/install/: local_setup.sh  setup.bash  setup.sh
ros_ws/install/my_battery_package/share/my_battery_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ros_ws/log/: latest_build
ros_ws/src/ms_sub/: setup.py
ros_ws/src/my_battery_package/: package.xml
ros_ws/src/my_battery_package/my_battery_package/: battery_publisher.py  battery_subscriber.py
ros_ws/src/pkg_interfaces/: CMakeLists.txt  package.xml
(+472 files in other folders)
